# simple-protobuf

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: ci-build.yml  ci-linux-coverage.yml  ci-linux-tests.yml  ci-macos-tests.yml  ci-windows-tests.yml  cmake-multi-platform.yml
benchmark/: CMakeLists.txt  benchmark-pb.cpp  benchmark-spb.cpp  gpb-benchmark.cpp  gpb-common.cpp  gpb-common.h  gpb-pb-deserialize.cpp  gpb-pb-serialize.cpp  json-deserialize.cpp  json-serialize.cpp  pb-deserialize.cpp  pb-serialize.cpp  spb-benchmark.cpp  spb-common.cpp  spb-common.h  spb-json-deserialize.cpp  spb-json-serialize.cpp  spb-pb-deserialize.cpp  spb-pb-serialize.cpp
benchmark/gpb/: CMakeLists.txt  benchmark.cpp  common.cpp  common.h  json-deserialize.cpp  json-serialize.cpp  pb-deserialize.cpp  pb-serialize.cpp
benchmark/nanopb/: CMakeLists.txt  benchmark.cpp  common.c  common.h  pb-deserialize.c  pb-serialize.c
benchmark/proto/: addressbook-lite.proto  addressbook.options  addressbook.proto  gpb-addressbook.proto
benchmark/spb/: CMakeLists.txt  benchmark.cpp  common.cpp  common.h  json-deserialize.cpp  json-serialize.cpp  pb-deserialize.cpp  pb-serialize.cpp  utf8.cpp
cmake/: fetch-gpb.cmake  fetch-nanopb.cmake  sds_protobuf.cmake  spb_compile_options.cmake  spb_protobuf.cmake  spb_warnings.cmake
doc/: API.md  Extensions.md  extensions.md  options.md
example/: CMakeLists.txt  addressbook.cpp  etl.cpp  options.cpp
example/proto/: etl.proto  spb_options.proto
include/sds/: char_stream.h  istream.h
include/sds/json/: base64.h  deserialize.hpp  serialize.hpp
include/sds/pb/: concepts.h  deserialize.hpp  serialize.hpp  wire-types.h
include/spb/: bits.h  char_stream.h  concepts.h  from_chars.h  json.hpp  pb.hpp  to_from_chars.h  utf8.h
include/spb/io/: buffer-io.hpp  function_ref.hpp  io.hpp
include/spb/json/: base64.h  deserialize.hpp  field.hpp  serialize.hpp
include/spb/pb/: concepts.h  deserialize.hpp  serialize.hpp  wire-types.h
include/spb/proto/: spb.proto  spb_options.proto
scripts/: benchmark-plotter.py  copy-generated-files.sh  file-size-plotter.py  run-benchmark.sh  run-tests-coverage.sh
src/: CMakeLists.txt
src/sds-proto-compiler/: CMakeLists.txt  main.cpp
src/sds-proto-compiler/ast/: ast.cpp  ast.h  proto-import.h  proto-map.h  proto-message.h
src/sds-proto-compiler/dumper/: dumper.cpp  header.cpp  header.h
src/sds-proto-compiler/dumper/json/: dumper.cpp  template-cpp.h  template-h.h
src/sds-proto-compiler/dumper/pb/: dumper.cpp  dumper.h  template-cpp.h  template-h.h
src/sds-proto-compiler/parser/: parser.cpp
src/spb-proto-compiler/: CMakeLists.txt  main.cpp
src/spb-proto-compiler/ast/: ast-messages-order.cpp  ast-messages-order.h  ast-options.cpp  ast-options.h  ast-types.cpp  ast-types.h  ast.cpp  ast.h  proto-comment.h  proto-common.h  proto-enum.h  proto-extend.h  proto-field.h  proto-file.h  proto-import.h  proto-map.h  proto-message.h  proto-oneof.h  proto-option.h  proto-service.h  proto-syntax.h
src/spb-proto-compiler/dumper/: dumper.cpp  dumper.h  header.cpp  header.h  indent_ostream.h
src/spb-proto-compiler/dumper/json/: dumper.cpp  dumper.h  template-h.h
src/spb-proto-compiler/dumper/pb/: dumper.cpp  dumper.h  template-cpp.h  template-h.h
src/spb-proto-compiler/io/: file.cpp  file.h
src/spb-proto-compiler/parser/: char_stream.h  options.h  parser.cpp  parser.h
test/: CMakeLists.txt  base64.cpp  doctest.h  etl-compatibility.cpp  gpb-compatibility.cpp  json-detail.cpp  json-proto-lite-test.cpp  json.cpp  main.cpp  parser.cpp  pb-detail.cpp  pb.cpp  protos.cpp
test/custom-output-dir/: CMakeLists.txt
test/custom-output-dir/include/: openapi.h
test/custom-output-dir/src/: addressbook.cpp
test/custom-output-dir/src/proto/: addressbook.proto
test/fuzzer/: spb-json-fuzzer.cpp  spb-pb-fuzzer.cpp  spb-protoc-fuzzer.cpp
test/include/: my_simd.h
test/proto/: array.proto  dependency.proto  desc.proto  enum.proto  map.proto  message.proto  nanopb.proto  nested_repeated.proto  options.proto  playlist4_external.proto  playlist_permission.proto  proto3.proto  scalar.proto  simd.proto
test/proto/array/: array.proto.in
test/proto/etl/: etl-person.proto.in  etl-scalar.proto.in
test/proto/name/: name.proto  name.proto.in
test/proto/person/: person.proto  person.proto.in
test/proto/reserved/: reserved.proto.in
test/proto/scalar/: scalar.proto  scalar.proto.in
